💄 Fixed missing blur effect on Firefox.

--- a/log-skeleton/src/styles/Content.module.css
+++ b/log-skeleton/src/styles/Content.module.css
@@ -2,7 +2,7 @@
     height: calc(100% - 60px);
     width: 100%;
     display: grid;
-    grid-template-columns: 15% auto 15%;
+    grid-template-columns: min(15%, 300px) auto min(15%, 300px);
     grid-template-rows: 100%;
 }
 
@@ -23,7 +23,7 @@
     width: 100%;
     height: 100%;
     min-width: 200px;
-    max-width: 300px;
+    /* max-width: 300px; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
