--- a/log-skeleton/src/styles/MainPanel.module.css
+++ b/log-skeleton/src/styles/MainPanel.module.css
@@ -2,7 +2,7 @@
     background-color: rgb(244, 246, 248);
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 /* Empty Panel */
